Наебывается на суперпозиции, добавил инструменты для тестов как сабмодуль, в директории ерроров два файла, в одном бесконечный цикл а в другом невалидный случай

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/MillyArrow/libft.git
+[submodule "42_lem-in_tools"]
+	path = 42_lem-in_tools
+	url = https://github.com/apft/42_lem-in_tools
